# FlecsECS

./: Cargo.toml  README.md  build.bat  buildDebug.bat  buildDev.bat  buildRelease.bat
.github/workflows/: ci.yml
newengine-ecs-flecs/: Cargo.toml  build.rs
newengine-ecs-flecs/src/: lib.rs
