[workspace]
resolver = "2"
members = ["newengine-ecs-flecs"]

[workspace.package]
edition = "2021"
license = "Proprietary"

[workspace.dependencies]
abi_stable = "0.11"
newengine-plugin-api = { package = "newengine-plugin-kit", path = "../../NewEngine/neocore2/crates/newengine-plugin-kit" }
newengine-ecs-api = { path = "../../NewEngine/neocore2/crates/newengine-ecs-api" }
newengine-entity-api = { path = "../../NewEngine/neocore2/crates/newengine-entity-api" }
newengine-scene-io = { path = "../../NewEngine/neocore2/crates/newengine-scene-io" }
newengine-assets = { path = "../../NewEngine/neocore2/crates/newengine-assets" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
cc = "1.0"
