[package]
name = "engine-ecs-constellation"
version = "0.1.3"
edition = "2021"
description = "North Star engine.ecs provider route: Flecs ECS implementation"
license = "Proprietary"

[dependencies]
newengine-plugin-api = { workspace = true }
newengine-ecs-api = { workspace = true }
newengine-entity-api = { workspace = true }
newengine-scene-io = { workspace = true }
newengine-assets = { workspace = true }
abi_stable = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[package.metadata.northstar.provider]
route = "engine.ecs.constellation"
install_name = "engine.ecs.constellation"
implements = "engine.ecs"

[lib]
name = "flecs_ecs"
crate-type = ["cdylib"]
