[package]
name = "engine-ecs-constellation"
version = "0.1.4"
build = "build.rs"
edition = "2021"
description = "North Star engine.ecs provider route: Flecs ECS implementation"
license = "Proprietary"

[dependencies]
newengine-plugin-api = { workspace = true }
newengine-ecs-api = { workspace = true }
newengine-entity-api = { workspace = true }
newengine-scene-io = { workspace = true }
newengine-assets-api = { workspace = true }
abi_stable = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[build-dependencies]
embed-resource = "3.0.6"
cc = { workspace = true }

[package.metadata.northstar.provider]
route = "engine.ecs.constellation"
install_name = "constellation-ecs"
implements = "engine.ecs"

[lib]
name = "flecs_ecs"
crate-type = ["cdylib"]
